fixed hero image overflowing in mobile

--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -3,6 +3,7 @@
 
     @include mobile {
         padding: 0 0 8rem 0;
+        overflow: hidden;
     }
 
     &--text {
